--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,47 @@ PUBLIC_WS_URL=ws://localhost.localdomain/ws
 # =============================================================================
 # Backend Database Service (databank)
 # =============================================================================
-PORT=8080
-HOST=0.0.0.0
-SESSION_SECRET=your_session_secret_here_change_in_production
+DATABANK_PORT=3000
+DATABANK_HOST=0.0.0.0
+DATABANK_DATABASE_PATH=/app/data/database.db
 
-DB_CLIENT=sqlite
-DB_CONNECTION=./data/db.sqlite3
+# Route prefixes
+AUTH_PREFIX=/auth
+OAUTH_PREFIX=/oauth
+API_PREFIX=/api
+
+# JWT Configuration
+JWT_ISSUER=ping-pong-api
+JWT_AUDIENCE=ping-pong-clients
+JWT_ACCESS_SECRET=dev-access-secret-change-me
+JWT_REFRESH_SECRET=dev-refresh-secret-change-me
+JWT_ACCESS_TTL=15m
+JWT_REFRESH_TTL=7d
+
+# OAuth Configuration
+OAUTH_STATE_SECRET=dev-oauth-state-secret-change-me
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URI=http://localhost:3000/oauth/github/callback
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost:3000/oauth/google/callback
+
+# =============================================================================
+# Game Logic Service (backend)
+# =============================================================================
+GAMELOGIC_PORT=3001
+GAMELOGIC_HOST=0.0.0.0
+
+# Game Settings
+GAME_WIDTH=4000
+GAME_HEIGHT=2000
+MAX_SCORE=10
+BALL_RADIUS=40
+BALL_SPEED=40
+PADDLE_SPEED=40
+PHYSICS_FPS=60
+RENDER_FPS=30
 
 # =============================================================================
 # Live Chat Service
