--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,34 @@ services:
     build:
       context: ./backend_database
     container_name: database
+    environment:
+      # Server config
+      - PORT=${DATABANK_PORT:-3000}
+      - HOST=${DATABANK_HOST:-0.0.0.0}
+      - NODE_ENV=${NODE_ENV:-production}
+      # Database config
+      - DATABASE_PATH=${DATABANK_DATABASE_PATH:-/app/data/database.db}
+      # Route prefixes
+      - AUTH_PREFIX=${AUTH_PREFIX:-/auth}
+      - OAUTH_PREFIX=${OAUTH_PREFIX:-/oauth}
+      - API_PREFIX=${API_PREFIX:-/api}
+      # JWT config
+      - JWT_ISSUER=${JWT_ISSUER:-ping-pong-api}
+      - JWT_AUDIENCE=${JWT_AUDIENCE:-ping-pong-clients}
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET:-dev-access-secret-change-me}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-dev-refresh-secret-change-me}
+      - JWT_ACCESS_TTL=${JWT_ACCESS_TTL:-15m}
+      - JWT_REFRESH_TTL=${JWT_REFRESH_TTL:-7d}
+      # OAuth config
+      - OAUTH_STATE_SECRET=${OAUTH_STATE_SECRET:-dev-oauth-state-secret-change-me}
+      - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID:-}
+      - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET:-}
+      - GITHUB_REDIRECT_URI=${GITHUB_REDIRECT_URI:-http://localhost:3000/oauth/github/callback}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID:-}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET:-}
+      - GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI:-http://localhost:3000/oauth/google/callback}
+      # Logging
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     volumes:
       - ./backend_database/database:/app/data
     restart: unless-stopped
@@ -15,8 +43,22 @@ services:
     build:
       context: ./backend_gamelogic
     container_name: game
-    # env_file:
-    #   - ./backend_gamelogic/.env.game
+    environment:
+      # Server config
+      - PORT=${GAMELOGIC_PORT:-3001}
+      - HOST=${GAMELOGIC_HOST:-0.0.0.0}
+      - NODE_ENV=${NODE_ENV:-production}
+      # Game settings
+      - GAME_WIDTH=${GAME_WIDTH:-4000}
+      - GAME_HEIGHT=${GAME_HEIGHT:-2000}
+      - MAX_SCORE=${MAX_SCORE:-10}
+      - BALL_RADIUS=${BALL_RADIUS:-40}
+      - BALL_SPEED=${BALL_SPEED:-40}
+      - PADDLE_SPEED=${PADDLE_SPEED:-40}
+      - PHYSICS_FPS=${PHYSICS_FPS:-60}
+      - RENDER_FPS=${RENDER_FPS:-30}
+      # Logging
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     restart: unless-stopped
     networks:
       - transcendence
