--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,34 +5,14 @@ services:
     build:
       context: ./backend_database
     container_name: database
+    env_file:
+      - .env
     environment:
-      # Server config
-      - PORT=${DATABANK_PORT:-3000}
-      - HOST=${DATABANK_HOST:-0.0.0.0}
-      - NODE_ENV=${NODE_ENV:-production}
-      # Database config
-      - DATABASE_PATH=${DATABANK_DATABASE_PATH:-/app/data/database.db}
-      # Route prefixes
-      - AUTH_PREFIX=${AUTH_PREFIX:-/auth}
-      - OAUTH_PREFIX=${OAUTH_PREFIX:-/oauth}
-      - API_PREFIX=${API_PREFIX:-/api}
-      # JWT config
-      - JWT_ISSUER=${JWT_ISSUER:-ping-pong-api}
-      - JWT_AUDIENCE=${JWT_AUDIENCE:-ping-pong-clients}
-      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET:-dev-access-secret-change-me}
-      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-dev-refresh-secret-change-me}
-      - JWT_ACCESS_TTL=${JWT_ACCESS_TTL:-15m}
-      - JWT_REFRESH_TTL=${JWT_REFRESH_TTL:-7d}
-      # OAuth config
-      - OAUTH_STATE_SECRET=${OAUTH_STATE_SECRET:-dev-oauth-state-secret-change-me}
-      - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID:-}
-      - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET:-}
-      - GITHUB_REDIRECT_URI=${GITHUB_REDIRECT_URI:-http://localhost:3000/oauth/github/callback}
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID:-}
-      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET:-}
-      - GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI:-http://localhost:3000/oauth/google/callback}
-      # Logging
-      - LOG_LEVEL=${LOG_LEVEL:-info}
+      # Map .env variables to internal service variables
+      PORT: ${DATABANK_PORT:-3000}
+      HOST: ${DATABANK_HOST:-0.0.0.0}
+      NODE_ENV: ${NODE_ENV:-production}
+      DATABASE_PATH: ${DATABANK_DATABASE_PATH:-/app/data/database.db}
     volumes:
       - ./backend_database/database:/app/data
     restart: unless-stopped
@@ -43,22 +23,12 @@ services:
     build:
       context: ./backend_gamelogic
     container_name: game
+    env_file:
+      - .env
     environment:
-      # Server config
-      - PORT=${GAMELOGIC_PORT:-3001}
-      - HOST=${GAMELOGIC_HOST:-0.0.0.0}
-      - NODE_ENV=${NODE_ENV:-production}
-      # Game settings
-      - GAME_WIDTH=${GAME_WIDTH:-4000}
-      - GAME_HEIGHT=${GAME_HEIGHT:-2000}
-      - MAX_SCORE=${MAX_SCORE:-10}
-      - BALL_RADIUS=${BALL_RADIUS:-40}
-      - BALL_SPEED=${BALL_SPEED:-40}
-      - PADDLE_SPEED=${PADDLE_SPEED:-40}
-      - PHYSICS_FPS=${PHYSICS_FPS:-60}
-      - RENDER_FPS=${RENDER_FPS:-30}
-      # Logging
-      - LOG_LEVEL=${LOG_LEVEL:-info}
+      PORT: ${GAMELOGIC_PORT:-3001}
+      HOST: ${GAMELOGIC_HOST:-0.0.0.0}
+      NODE_ENV: ${NODE_ENV:-production}
     restart: unless-stopped
     networks:
       - transcendence
@@ -67,21 +37,31 @@ services:
     build:
       context: ./frontend
     container_name: frontend
+    env_file:
+      - .env
     environment:
-      # Public URLs (injected into browser at runtime)
-      - PUBLIC_API_URL=${PUBLIC_API_URL:-https://localhost:8443/api}
-      - PUBLIC_WS_URL=${PUBLIC_WS_URL:-wss://localhost:8443/ws}
+      PUBLIC_API_URL: ${PUBLIC_API_URL:-https://localhost:8443/api}
+      PUBLIC_WS_URL: ${PUBLIC_WS_URL:-wss://localhost:8443/ws}
     restart: unless-stopped
     networks:
       - transcendence
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./ops
     container_name: nginx-proxy
+    env_file:
+      - .env
+    environment:
+      NGINX_INTERNAL_PORT: 8443
+      NGINX_HOST: ${NGINX_HOST:-localhost}
+      FRONTEND_PORT: ${FRONTEND_PORT:-4200}
+      DATABANK_PORT: ${DATABANK_PORT:-3000}
+      GAMELOGIC_PORT: ${GAMELOGIC_PORT:-3001}
+      LIVECHAT_PORT: ${LIVECHAT_PORT:-3002}
     ports:
       - "${NGINX_PORT:-8443}:8443"
     volumes:
-      - ./ops/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./.certs:/etc/nginx/certs:ro
     depends_on:
       - frontend
@@ -95,17 +75,14 @@ services:
     build:
       context: ./live-chat
     container_name: live-chat
+    env_file:
+      - .env
     environment:
-      # Server config
-      - PORT=${LIVECHAT_PORT:-3002}
-      - HOST=${LIVECHAT_HOST:-0.0.0.0}
-      - NODE_ENV=${NODE_ENV:-production}
-      # Database config
-      - DATABASE_PATH=${LIVECHAT_DATABASE_PATH:-/app/data/database.db}
-      # Auth service URL (internal Docker network)
-      - AUTH_SERVICE_URL=${AUTH_SERVICE_URL:-http://databank:3000}
-      # Logging
-      - LOG_LEVEL=${LOG_LEVEL:-info}
+      PORT: ${LIVECHAT_PORT:-3002}
+      HOST: ${LIVECHAT_HOST:-0.0.0.0}
+      NODE_ENV: ${NODE_ENV:-production}
+      DATABASE_PATH: ${LIVECHAT_DATABASE_PATH:-/app/data/database.db}
+      AUTH_SERVICE_URL: ${AUTH_SERVICE_URL:-http://databank:3000}
     ports:
       - "${LIVECHAT_PORT:-3002}:${LIVECHAT_PORT:-3002}"
     volumes:
