--- a/.github/workflows/security-quality.yml
+++ b/.github/workflows/security-quality.yml
@@ -247,8 +247,17 @@ jobs:
             fi
           done
 
-          # Validate docker-compose.yml
-          docker compose config > /dev/null
+          # Validate docker-compose.yml syntax (create minimal .env for validation)
+          cp .env.example .env 2>/dev/null || touch .env
+          if docker compose config > /dev/null 2>&1; then
+            echo "✓ Docker compose configuration is valid"
+          else
+            echo "ERROR: docker-compose.yml has syntax errors"
+            rm -f .env
+            exit 1
+          fi
+          rm -f .env
+
           echo "✓ Docker configuration valid"
 
       - name: Check Docker security best practices
