--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -47,7 +47,7 @@ jobs:
 
           found_secrets=0
           for pattern in "${secret_patterns[@]}"; do
-            if grep -r -E -i "$pattern" --include="*.js" --include="*.ts" --include="*.json" --include="*.yml" --include="*.yaml" --exclude-dir=".git" --exclude-dir="node_modules" . 2>/dev/null; then
+            if grep -r -E -i "$pattern" --include="*.js" --include="*.ts" --include="*.json" --include="*.yml" --include="*.yaml" --exclude-dir=".git" --exclude-dir="node_modules" --exclude-dir="tests" . 2>/dev/null; then
               echo "ERROR: Potential secret found matching pattern: $pattern"
               found_secrets=1
             fi
