--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   test-gateway-integration:
     runs-on: ubuntu-latest
+    env:
+      NGINX_HTTPS_PORT: 8443
+      NGINX_HTTP_PORT: 8080
+      NGINX_HOST: localhost
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -38,7 +42,7 @@ jobs:
           while [ $timeout -gt 0 ]; do
             # Check if we can reach the frontend through nginx
             # -k: accept self-signed cert, -s: silent, -f: fail on error, -I: HEAD request only
-            if curl -k -s -f -I https://localhost:8443 > /dev/null 2>&1; then
+            if curl -k -s -f -I https://$NGINX_HOST:$NGINX_HTTPS_PORT > /dev/null 2>&1; then
               echo "✓ Services are ready!"
               break
             fi
@@ -60,7 +64,7 @@ jobs:
       - name: Test HTTPS frontend access
         run: |
           echo "Testing HTTPS frontend access..."
-          response=$(curl -k -s -o /dev/null -w "%{http_code}" https://localhost:8443)
+          response=$(curl -k -s -o /dev/null -w "%{http_code}" https://$NGINX_HOST:$NGINX_HTTPS_PORT)
           if [ "$response" != "200" ]; then
             echo "ERROR: HTTPS frontend access failed. Expected 200, got $response"
             exit 1
@@ -73,7 +77,7 @@ jobs:
           # Test that API routes are accessible through nginx
           # /api/users is public (returns 200), so test a protected endpoint
           # /api/users/1 requires authentication and should return 401
-          response=$(curl -k -s -o /dev/null -w "%{http_code}" https://localhost:8443/api/users/1)
+          response=$(curl -k -s -o /dev/null -w "%{http_code}" https://$NGINX_HOST:$NGINX_HTTPS_PORT/api/users/1)
           if [ "$response" != "401" ]; then
             echo "ERROR: API routing failed. Expected 401 (unauthorized), got $response"
             exit 1
@@ -83,7 +87,7 @@ jobs:
       - name: Test Auth routing through gateway
         run: |
           echo "Testing Auth routing..."
-          response=$(curl -k -s -o /dev/null -w "%{http_code}" -X POST -H "Content-Type: application/json" -d '{}' https://localhost:8443/auth/register)
+          response=$(curl -k -s -o /dev/null -w "%{http_code}" -X POST -H "Content-Type: application/json" -d '{}' https://$NGINX_HOST:$NGINX_HTTPS_PORT/auth/register)
           if [ "$response" != "400" ]; then
             echo "ERROR: Auth routing failed. Expected 400 (validation error), got $response"
             exit 1
