--- a/ops/nginx.conf.template
+++ b/ops/nginx.conf.template
@@ -19,22 +19,13 @@ server {
         add_header Content-Security-Policy "connect-src 'self';" always;
     }
 
-    # API routes - strip /api prefix when proxying to backend
+    # API routes - includes /api/auth, /api/oauth, /api/users, etc.
     location /api/ {
-        rewrite ^/api/(.*) /$1 break;
-        proxy_pass http://databank:${DATABANK_PORT};
+        proxy_pass http://databank:${DATABANK_PORT}/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /auth/ {
-        proxy_pass http://databank:${DATABANK_PORT}/auth/;
-    }
-
-    location /oauth/ {
-        proxy_pass http://databank:${DATABANK_PORT}/oauth/;
     }
 
     location /game/ {
