--- a/ops/nginx.conf.template
+++ b/ops/nginx.conf.template
@@ -28,6 +28,23 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Direct auth/oauth routes for backward compatibility - redirect to /api namespace
+    location /auth/ {
+        proxy_pass http://databank:${DATABANK_PORT}/api/auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /oauth/ {
+        proxy_pass http://databank:${DATABANK_PORT}/api/oauth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /game/ {
         proxy_pass http://backend:${GAMELOGIC_PORT}/;
     }
