--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -37,9 +37,9 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
-# Health check
+# Health check using curl (wget has issues in some Alpine versions)
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD wget --quiet --tries=1 --spider http://localhost:4200/ || exit 1
+    CMD curl -f http://localhost:4200/ || exit 1
 
 EXPOSE 4200
 
